<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/imageView_normalAppInfo"
            android:layout_width="154dp"
            android:layout_height="210dp"
            android:background="@android:color/transparent"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_appInfoAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/app_name_text"
            android:textColor="@color/white100"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/textView_appInfoAppDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/three_four_words_description_text"
            android:textColor="@color/white100"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView_appRatingHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/urbanist_regular"
            android:text="Rating"
            android:textColor="@color/white100"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView_appInfoRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/rating_text"
            android:textColor="@color/white100"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/textView_appInfoReviewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/review_text"
            android:textColor="@color/white100"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView_appInfoPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/price_text"
            android:textColor="@color/white100"
            android:textSize="24dp" />
    </LinearLayout>
</LinearLayout>