<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AppInfoFragment">

    <View
        android:id="@+id/view_Expanded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brandColor"
        android:transitionName="viewExpanded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/app_name"
        android:textColor="@color/white100"
        android:textSize="24dp"
        tools:ignore="RelativeOverlap,SpUsage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_appifyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="24dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/appify_header_logo_cd"
            app:srcCompat="@drawable/appify_logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView_appifyLogo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/urbanist_regular"
        android:text="Swipe Down To Dismiss"
        android:textColor="@color/white50"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_makeItMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView_appifyLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/make_it_mine_text"
        android:textColor="@color/white100"
        android:textSize="24dp"
        android:transitionName="makeItMineExpanded"
        tools:ignore="SpUsage" />

    <include
        android:id="@+id/layout_appInfoNormal"
        layout="@layout/layout_normal_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_makeItMine"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/button_submitAppInfo"
        android:layout_below="@id/layout_appInfoNormal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:maxLines="1"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/urbanist_regular"
                android:hint="@string/name_hint"
                android:autofillHints="name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/white100"
                android:textColorHint="@color/white100"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/urbanist_regular"
                android:hint="@string/e_mail_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white100"
                android:textColorHint="@color/white100"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText_contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:layout_margin="8dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/urbanist_regular"
                android:hint="@string/contact_no_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:padding="15dp"
                android:textColor="@color/white100"
                android:textColorHint="@color/white100"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/button_submitAppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_submit_button"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:fontFamily="@font/urbanist_regular"
        android:paddingStart="26dp"
        android:paddingTop="12dp"
        android:paddingEnd="26dp"
        android:paddingBottom="12dp"
        android:text="@string/submit_text"
        android:textAlignment="center"
        android:textColor="@color/brandColor"
        android:textSize="20dp"
        app:drawableStartCompat="@drawable/ic_submit" />
</RelativeLayout>