<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white100"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/app_name"
        android:textColor="@color/black100"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RelativeOverlap,SpUsage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_appifyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/appify_header_logo_cd"
            app:srcCompat="@drawable/appify_logo" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_loadingIndicator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_appifyLogo"
        android:orientation="vertical"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/brandColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_info_text"
            android:fontFamily="@font/urbanist_regular"
            android:textSize="24sp"
            android:layout_margin="24dp"
            android:textColor="@color/brandColor"/>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_homeFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:paddingStart="52dp"
        android:paddingEnd="52dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_appifyLogo" />

    <View
        android:id="@+id/view_toExpand"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_make_it_mine_button"
        android:clickable="true"
        android:focusable="true"
        android:transitionName="viewToExpand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_makeItMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/please_wait_text"
        android:textColor="@color/white100"
        android:textSize="24dp"
        android:transitionName="makeItMineToExpand"
        app:layout_constraintBottom_toBottomOf="@id/view_toExpand"
        app:layout_constraintEnd_toEndOf="@id/view_toExpand"
        app:layout_constraintStart_toStartOf="@id/view_toExpand"
        app:layout_constraintTop_toTopOf="@id/view_toExpand"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/imageView_upArrow_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/up_arrow_icon_cd"
        app:layout_constraintBottom_toTopOf="@id/view_toExpand"
        app:layout_constraintEnd_toEndOf="@id/view_toExpand"
        app:layout_constraintStart_toStartOf="@id/view_toExpand"
        app:srcCompat="@drawable/ic_up_arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>